# Locus

./: .gitignore  README.md  README.zh-CN.md  index.html  package.json  unity-hotreload-compat-plan.md  vite.config.ts
docs/: docs.json  index.mdx
locus_compile_server/: AccessProbeSource.cs  CallerScan.cs  CompileService.cs  DiagnosticText.cs  FieldStoreRegistry.cs  HotDiff.cs  ImageRegistry.cs  LocusCompileServer.csproj  MemberSurfaceRegistry.cs  NewTypeRegistry.cs  PatchBatch.cs  PatchRewriter.cs  Program.cs  ReferenceCache.cs  RunStatesSource.cs  StdioTransport.cs  TypeIndexSource.cs  UnitySnippetSource.cs
locus_hotreload_runtime/: LocusFieldStore.cs  LocusHotReloadRuntime.csproj
locus_native_plugin/: Cargo.toml
locus_native_plugin/src/: lib.rs
scripts/: build-locus-compile-server.mjs  build-locus-detour-bundle.mjs  build-locus-hotreload-runtime.mjs  build-locus-native-plugin.mjs  build-release-installers.mjs  ensure-locus-compile-server.mjs  export-view-runtime-sources.mjs  locus-unity-test-matrix.mjs  locus-unity-test.mjs  run-tauri.mjs  verify-release-version.mjs
src/: App.vue  hljs.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
tools/: ask.json  bash.json  code_find_references.json  code_goto_definition.json  code_symbol_search.json  edit.json  grep.json  knowledge_create.json  knowledge_delete.json  knowledge_edit.json  knowledge_list.json  knowledge_move.json  knowledge_query.json  knowledge_read.json  read.json  skill_create.json  skill_list.json  skill_reload.json  tool_call.json  tool_load.json  unity_asset_search.json  unity_execute.json  (+10 more)
(+353 files in other folders)
